--- a/app.css
+++ b/app.css
@@ -14,6 +14,11 @@ h1,h2,h3,h4,h5,h6{font-family:'Cabin',sans-serif;}
   color: #000 !important;
   text-transform: uppercase;
 }
+.top-bar.expanded .top-bar-section ul li>a {
+  text-align:right;
+  padding-right: 15px;
+}
+
 .top-bar .toggle-topbar.menu-icon a span::after {
  box-shadow: 0 0 0 1px #000,0 7px 0 1px #000,0 14px 0 1px #000;
 }
